syntax = "proto3";
package gov.hhs.aspr.ms.gcm.pipeline;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.pipeline.input";

message SimulationStatePipelineInput {
    string simulationSettingsFile = 1;
    string simulationStateFile = 2;
}

message ExperimentParameterPipelineInput {
    string experimentParametersFile = 1;
    string experimentParameterDataFile = 2;
    string explicitScenarioIdsFile = 3;
}